fix style: inherit main font-size
As main now gets an explicit font-size from header.css which doesn't fit
here it must inherit it's size from body as before.

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
   adjust header styling
 
-  ***************************************************************************** */
+***************************************************************************** */
 
 header {
   margin-bottom: 1em;
@@ -98,6 +98,10 @@ input, button, textarea, select {
 /* Just for this special page */
 body {
   font-size: 2em;
+}
+
+main {
+  font-size: inherit;
 }
 
 #dialogText {
